moving to other notebook

--- a/templates/test.html
+++ b/templates/test.html
@@ -261,7 +261,7 @@
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
-									<span>Chat with JohanBot</span>
+									<span>DeutschBot</span>
 									<p>{{ chat|length }} Nachrichten</p>
 								</div>
 								<div class="video_cam">
@@ -334,7 +334,7 @@
 						<form action='/' method='POST'>
 							<div class="input-group">
 
-								<textarea name='antwort' id='antwort' type=text class="form-control type_msg" placeholder="Type your message..."></textarea>
+								<textarea name='antwort' id='antwort' type=text class="form-control type_msg" placeholder="Nachricht"></textarea>
 								<div class="input-group-append">
 									<button type="submit" class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></button>
 								</div>
